[gd_scene load_steps=2 format=3 uid="uid://bmylpelnr50lw"]

[ext_resource type="Script" path="res://scenes/gui/placeholder_menu_overlay.gd" id="1_qn30g"]

[node name="MenuOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qn30g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 234.0
offset_bottom = 120.0

[node name="Server" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ServerButton" type="Button" parent="VBoxContainer/Server"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Start Server"

[node name="StartGameButton" type="Button" parent="VBoxContainer/Server"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Start Game"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Client" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IpLabel" type="Label" parent="VBoxContainer/Client"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "IP: "

[node name="IpEdit" type="LineEdit" parent="VBoxContainer/Client"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
placeholder_text = "127.0.0.1"
expand_to_text_length = true

[node name="ClientButton" type="Button" parent="VBoxContainer/Client"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Join Game
"
